--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,25 +1,27 @@
 /*COLORES*/
-:root{
---color-presentacion: #19294D;
---color-titulos: #1B1C1D;
---color-subtitulos: #213A57;
---color-descripciones: #281E1D;
---color-resaltados:#0B7BD6 ;
---color-footer: #F4F5F6; 
---color-texto_footer: ;
---color-general: white;
---color-botones: #0980DA;
- 
+:root {
+    --color-presentacion: #19294D;
+    --color-titulos: #1B1C1D;
+    --color-subtitulos: #213A57;
+    --color-descripciones: #281E1D;
+    --color-resaltados: #0B7BD6;
+    --color-footer: #F4F5F6;
+    --color-texto_footer: ;
+    --color-general: white;
+    --color-botones: #0980DA;
+    --color-fondo: #051427;
+
 }
 
 /*ENCABEZADO*/
-.layout__encabezado{
-    width: 100%;  /* Todo el ancho disponible */
-    height: 194px; /* Altura fija */
+.layout__encabezado {
+    width: 100%;
+    /* Todo el ancho disponible */
+
 }
 
 /*ENCABEZADO ARRIBA*/
-.encabezado__arriba{
+.encabezado__arriba {
     height: 3.2rem;
     display: flex;
     align-items: center;
@@ -27,8 +29,9 @@
     background-color: var(--color-footer);
 }
 
-.arriba__texto{
-    position: relative; /*Necesario para efecto hover con linea*/
+.arriba__texto {
+    position: relative;
+    /*Necesario para efecto hover con linea*/
     font-family: "Inter", sans-serif;
     font-size: small;
     padding: 0rem 1rem 0rem 1rem;
@@ -36,12 +39,13 @@
     flex-direction: row-reverse;
 }
 
-.texto__login, .texto__enus{
+.texto__login,
+.texto__enus {
     position: relative;
     top: 0.4rem;
 }
 
-.texto__icono{
+.texto__icono {
     align-items: center;
     position: relative;
     height: 1rem;
@@ -59,15 +63,18 @@
 }
 
 /*ENCABEZADO EN MEDIO*/
-.encabezado__menu, .menu__navegacion {
+.encabezado__menu,
+.menu__navegacion {
     height: 90px;
 
 }
 
 .menu__navegacion {
-    display: flex;   /* para distribuir los elementos */
+    display: flex;
+    /* para distribuir los elementos */
     flex-direction: row;
-    padding: 1rem;   /* Espaciado alrededor de los elementos */
+    padding: 1rem;
+    /* Espaciado alrededor de los elementos */
 }
 
 .navegacion__logo {
@@ -79,38 +86,45 @@
 
 .navegacion__texto {
     display: flex;
-    flex-direction: row;  
-    align-items: center;  /* Centra todo el contenido verticalmente */
+    flex-direction: row;
+    align-items: center;
+    /* Centra todo el contenido verticalmente */
 
-    flex: 1;  /* Esto permite que el contenedor tome el espacio disponible */
+    flex: 1;
+    /* Esto permite que el contenedor tome el espacio disponible */
 }
 
 .texto__menu {
     font-family: "Inter", sans-serif;
     margin: 1rem;
-    display: flex;  /* Asegura que los elementos dentro del div estén en fila */
-    align-items: center;  /* Centra el texto y el icono verticalmente */
-    
+    display: flex;
+    /* Asegura que los elementos dentro del div estén en fila */
+    align-items: center;
+    /* Centra el texto y el icono verticalmente */
+
 }
 
 .texto__menu.menu__trials,
 .texto__menu.menu__search {
-    margin-left: auto;  /* Empuja estos dos elementos a la derecha */
-    
+    margin-left: auto;
+    /* Empuja estos dos elementos a la derecha */
+
 }
 
 .texto__menu.menu__search {
-    margin-left: 0.5rem;  /* Ajusta el margen izquierdo de Search */
+    margin-left: 0.5rem;
+    /* Ajusta el margen izquierdo de Search */
 }
 
 .menu__icono {
-    margin-left: 0.5rem;  /* Agrega un espacio entre el texto de search y el logo */
+    margin-left: 0.5rem;
+    /* Agrega un espacio entre el texto de search y el logo */
     width: 1rem;
     height: 1rem;
 }
 
 /*Boton trials and demos*/
-.texto__menu.menu__trials{
+.texto__menu.menu__trials {
     height: 2rem;
     width: 10rem;
     border-radius: 1rem;
@@ -118,7 +132,7 @@
     color: var(--color-botones);
 }
 
-.menu__trials{
+.menu__trials {
     margin-left: 1rem;
 }
 
@@ -129,54 +143,239 @@
 }
 
 .texto__menu:not(.texto__menu.menu__trials):hover {
-    text-decoration: underline; /* Efecto hover solo en los elementos que no tengan la clase*/
+    text-decoration: underline;
+    /* Efecto hover solo en los elementos que no tengan la clase*/
 }
 
 /*ENCABEZADO ABAJO*/
-.encabezado__abajo{
+.encabezado__abajo {
     height: 100px;
     background-color: var(--color-footer);
-    display: flex; 
-    align-items: center;  /* Centra verticalmente */
-    justify-content: center;  /* Centra horizontalmente */
-    gap: 1rem; /* Espaciado entre logo y textos */
+    display: flex;
+    align-items: center;
+    /* Centra verticalmente */
+    justify-content: center;
+    /* Centra horizontalmente */
+    gap: 1rem;
+    /* Espaciado entre logo y textos */
 }
 
-.abajo__logo{
+.abajo__logo {
     position: relative;
     display: flex;
     align-items: center;
     height: 10rem;
     width: 10rem;
-    bottom:0.4rem;
+    bottom: 0.4rem;
 }
 
 
-.textos__titulo, .textos__subtitulo{
+.textos__titulo,
+.textos__subtitulo {
     position: relative;
     display: flex;
     flex-direction: column;
     font-family: "Roboto", sans-serif;
 }
 
-.textos__subtitulo{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+.textos__subtitulo {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--color-subtitulos);
 }
 
-.subtitulo__link{
+.subtitulo__link {
     font-weight: bold;
 }
 
-.resaltado{
+.resaltado {
     color: var(--color-resaltados);
 }
 
 /*ENCABEZADO ABAJO EFECTOS HOVER*/
-.subtitulo__link:hover{
+.subtitulo__link:hover {
     color: var(--color-resaltados);
-    text-decoration:underline;
+    text-decoration: underline;
     transition: all 300ms ease-in-out;
 }
+
+
+/*CONTENIDO CON FONDO DE IMAGEN*/
+
+.layout__content {
+    position: relative;
+    /* Asegura que los textos estén por encima */
+    width: 100%;
+    height: 600px;
+    background-color: var(--color-fondo);
+
+}
+
+.content__fondo {
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.fondo__azul {
+    position: relative;
+    height: 600px;
+}
+
+.content__presentacion {
+    position: relative;
+}
+
+.presentacion__titulo {
+    color: var(--color-general);
+    position: relative;
+    bottom: 31rem;
+    padding-left: 5rem;
+
+    font-size: 5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 450;
+}
+
+.presentacion__descripcion {
+    position: relative;
+    color: var(--color-general);
+    bottom: 30rem;
+    padding-left: 5rem;
+    font-size: 1.5rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+}
+
+.elemntosfila__boton {
+    bottom: 30rem;
+    padding-left: 5.8rem;
+    position: relative;
+    z-index: 999;
+}
+
+.boton__texto {
+    font-size: 1.3rem;
+    font-family: "Inter", sans-serif;
+    display: flex;
+    color: var(--color-presentacion);
+    border-radius: 2rem;
+    border: solid 2px;
+    width: 15rem;
+    margin: 1rem;
+    padding: 0.6rem;
+    padding-left: 1.8rem;
+    background-color: var(--color-general);
+ 
+}
+
+.elemntosfila__link{
+    position: relative;
+    color:var(--color-general);
+    bottom: 28.2rem;
+
+
+    font-size: 1.3rem;
+    font-family: "Inter", sans-serif;
+}
+
+.presentacion__elemntosfila{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+.content__logos{
+    position: relative;
+    bottom: 48rem;
+    padding-left: 76rem;
+}
+
+/*Segundo menu dentro de contenido con fondo de imagen*/
+.content__menu2{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    bottom: 35rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
+}
+
+.icono__nombre{
+    font-family: "Inter", sans-serif;
+    font-size: 1rem;
+}
+
+
+/*/*CONTENIDO CON FONDO DE IMAGEN EFECTOS HOVER*/
+
+.elemntosfila__link:hover{
+    text-decoration: underline;
+   
+}
+
+.boton__texto:hover{
+    background-color: var(--color-footer);
+}
+
+.icono__nombre:hover{
+    text-decoration: underline;
+}
+
+
+/*SECCION PRODUCTOS*/
+
+.layout__productos{
+    width: 100%;
+    padding-top: 13rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  /* Alinea el contenido en el eje horizontal */
+    justify-content: center; /* Centra los elementos dentro de .layout__productos */
+    padding-right: 2rem;
+}
+
+.productos__titulo{
+    font-family: "Inter", sans-serif;
+    font-size: 2rem;
+    font-weight: 50;
+    text-align: center;  /* Alinea el título al centro */
+
+    padding-top: 1rem;
+    padding-bottom: 4rem;
+}
+
+.producto__producto{
+    display: flex;
+    flex-direction: row;
+    justify-content: center; /* Asegura que los elementos en esta fila se centren */
+    align-items: center; /* Alinea los elementos en el centro verticalmente */
+}
+
+.productos__producto{
+    padding: 3rem;
+
+}
+
+.info__titulo{
+    font-family: "Inter", sans-serif;
+    font-size: 1.5rem;
+    margin:2rem;
+    font-weight: 400;
+}
+
+.info__descripcion, .info__link{
+    font-family: "Inter", sans-serif;
+    font-size: 1.3rem;
+    margin:2rem;
+    font-weight: 400;
+}
+
+
+
+
+
+
+
 
 
