--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,8 +24,8 @@
 .encabezado__arriba {
     height: 3.2rem;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    align-items: center; /*verticalmente*/
+    justify-content: flex-end; /*horizontalmente*/
     background-color: var(--color-footer);
 }
 
@@ -34,7 +34,7 @@
     /*Necesario para efecto hover con linea*/
     font-family: "Inter", sans-serif;
     font-size: small;
-    padding: 0rem 1rem 0rem 1rem;
+    padding: 0rem 1rem 0rem 1rem; /*arriba, derecha, abajo, izquierda*/
     display: flex;
     flex-direction: row-reverse;
 }
@@ -88,8 +88,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* Centra todo el contenido verticalmente */
-
     flex: 1;
     /* Esto permite que el contenedor tome el espacio disponible */
 }
@@ -353,7 +351,15 @@
 }
 
 .productos__producto{
-    padding: 3rem;
+    margin: 3rem;
+
+
+}
+
+
+
+.imagen__img{
+    width: 100%;   
 
 }
 
@@ -373,8 +379,30 @@
 
 
 
+/*CSS PARA TECLADO CON SONIDO*/
+.layout__inicio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    gap: 8.5rem;
+    background-color: #1B1C1D;
+}
 
+.inicio__tecla{
+    position: relative;
+    display: flex;
+    flex-direction:row;
+    border: solid 2px;
+    color: var(--color-subtitulos);
+    padding: 1.5rem 2rem ;
+    border-radius: 0.5rem;
+}
 
+.inicio__tecla:hover{
+    background-color: var(--color-resaltados);
+    color:var(--color-footer) ;
+}
 
 
 
