--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@
     --color-general: white;
     --color-botones: #0980DA;
     --color-fondo: #051427;
+    --color-extra:#CACACA;
 
 }
 
@@ -404,6 +405,87 @@
     color:var(--color-footer) ;
 }
 
+/* ESTILOS PROMESAS*/
+.layout__pedido{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    padding: 10rem;
+}
+
+.pedido__formulario{
+
+    padding: 4rem 20rem;
+
+}
+
+.formulario__opciones{
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    position: relative;
+    left: 3rem;
+}
+
+.formulario__titulo{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 1rem;
+    position: relative;
+    bottom: 1rem;
+    color: var(--color-presentacion);
+    font-size: 2.5rem;
+}
+
+.formulario__input{
+    padding: 0.5rem;
+    position: relative;
+    width: 20rem;
 
 
+}
 
+button {
+    all: unset; /* borra estilos por defecto */
+    cursor: pointer; /* para que se vea como botón */
+}
+
+
+.formulario__boton{
+
+    border-radius: 1rem;
+    color: var(--color-titulos);
+    background-color: var(--color-extra);
+    width: 10rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.pedido__resultado{
+    padding: 1rem 23rem;
+
+
+}
+
+.resultado__hamburguesa{
+    padding: 1rem;
+}
+
+.resultdo__img{
+    width: 35rem;
+}
+
+.hamburguesa__respuesta{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.5rem;
+}
+
+.formulario__mensaje {
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
